--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1282,14 +1282,14 @@ select {
 .right-0 {
 	right: 0px;
 }
-.top-0 {
-	top: 0px;
-}
 .bottom-8 {
 	bottom: 2rem;
 }
 .top-2\/4 {
 	top: 50%;
+}
+.top-0 {
+	top: 0px;
 }
 .z-0 {
 	z-index: 0;
@@ -1303,23 +1303,23 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
-.col-span-7 {
-	grid-column: span 7 / span 7;
+.col-span-3 {
+	grid-column: span 3 / span 3;
 }
 .col-span-1 {
 	grid-column: span 1 / span 1;
 }
+.col-span-7 {
+	grid-column: span 7 / span 7;
+}
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
-.col-span-3 {
-	grid-column: span 3 / span 3;
+.m-4 {
+	margin: 1rem;
 }
 .m-6 {
 	margin: 1.5rem;
-}
-.m-4 {
-	margin: 1rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1329,13 +1329,13 @@ select {
 	margin-left: 1.5rem;
 	margin-right: 1.5rem;
 }
-.my-16 {
-	margin-top: 4rem;
-	margin-bottom: 4rem;
-}
 .my-12 {
 	margin-top: 3rem;
 	margin-bottom: 3rem;
+}
+.my-16 {
+	margin-top: 4rem;
+	margin-bottom: 4rem;
 }
 .-mx-1 {
 	margin-left: -0.25rem;
@@ -1410,14 +1410,11 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
-}
-.-mt-px {
-	margin-top: -1px;
-}
 .mt-16 {
 	margin-top: 4rem;
+}
+.mb-24 {
+	margin-bottom: 6rem;
 }
 .mb-32 {
 	margin-bottom: 8rem;
@@ -1425,8 +1422,11 @@ select {
 .mb-12 {
 	margin-bottom: 3rem;
 }
-.mb-24 {
-	margin-bottom: 6rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
+.-mt-px {
+	margin-top: -1px;
 }
 .block {
 	display: block;
@@ -1476,14 +1476,14 @@ select {
 .h-20 {
 	height: 5rem;
 }
+.h-96 {
+	height: 24rem;
+}
 .h-full {
 	height: 100%;
 }
 .h-screen {
 	height: 100vh;
-}
-.h-96 {
-	height: 24rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1545,6 +1545,15 @@ select {
 .w-24 {
 	width: 6rem;
 }
+.w-screen {
+	width: 100vw;
+}
+.w-11\/12 {
+	width: 91.666667%;
+}
+.w-96 {
+	width: 24rem;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1560,8 +1569,8 @@ select {
 .max-w-xl {
 	max-width: 36rem;
 }
-.max-w-6xl {
-	max-width: 72rem;
+.max-w-4xl {
+	max-width: 56rem;
 }
 .max-w-lg {
 	max-width: 32rem;
@@ -1569,8 +1578,8 @@ select {
 .max-w-3xl {
 	max-width: 48rem;
 }
-.max-w-4xl {
-	max-width: 56rem;
+.max-w-6xl {
+	max-width: 72rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1626,14 +1635,14 @@ select {
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-.grid-cols-8 {
-	grid-template-columns: repeat(8, minmax(0, 1fr));
-}
 .grid-cols-4 {
 	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-cols-3 {
 	grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-8 {
+	grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1668,11 +1677,11 @@ select {
 .gap-3 {
 	gap: 0.75rem;
 }
-.gap-5 {
-	gap: 1.25rem;
-}
 .gap-8 {
 	gap: 2rem;
+}
+.gap-5 {
+	gap: 1.25rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1694,21 +1703,6 @@ select {
 	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-7 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
-}
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -1719,6 +1713,11 @@ select {
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1728,6 +1727,16 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-y-7 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
@@ -1808,11 +1817,11 @@ select {
 .border-b {
 	border-bottom-width: 1px;
 }
-.border-r {
-	border-right-width: 1px;
-}
 .border-b-4 {
 	border-bottom-width: 4px;
+}
+.border-r {
+	border-right-width: 1px;
 }
 .border-gray-300 {
 	--tw-border-opacity: 1;
@@ -1837,13 +1846,13 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(43, 145, 191, var(--tw-border-opacity));
 }
-.border-gray-400 {
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
 .border-theme-blue-200 {
 	--tw-border-opacity: 1;
 	border-color: rgba(38, 130, 171, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1897,9 +1906,13 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(43, 145, 191, var(--tw-bg-opacity));
 }
-.bg-theme-blue-200 {
+.bg-green-500 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(38, 130, 171, var(--tw-bg-opacity));
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 .bg-blue-200 {
 	--tw-bg-opacity: 1;
@@ -1909,6 +1922,18 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+.bg-theme-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(38, 130, 171, var(--tw-bg-opacity));
+}
+.bg-green-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+}
 .bg-green-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
@@ -1916,22 +1941,6 @@ select {
 .bg-red-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
-}
-.bg-green-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
-}
-.bg-green-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-}
-.bg-gray-900 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1964,6 +1973,9 @@ select {
 .p-8 {
 	padding: 2rem;
 }
+.p-10 {
+	padding: 2.5rem;
+}
 .p-1 {
 	padding: 0.25rem;
 }
@@ -1972,9 +1984,6 @@ select {
 }
 .p-5 {
 	padding: 1.25rem;
-}
-.p-10 {
-	padding: 2.5rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2032,13 +2041,13 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
-}
 .py-28 {
 	padding-top: 7rem;
 	padding-bottom: 7rem;
+}
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -2070,8 +2079,11 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-.pt-8 {
-	padding-top: 2rem;
+.pt-24 {
+	padding-top: 6rem;
+}
+.pb-16 {
+	padding-bottom: 4rem;
 }
 .pt-16 {
 	padding-top: 4rem;
@@ -2079,17 +2091,14 @@ select {
 .pb-8 {
 	padding-bottom: 2rem;
 }
-.pt-24 {
-	padding-top: 6rem;
-}
-.pb-16 {
-	padding-bottom: 4rem;
-}
 .pr-2 {
 	padding-right: 0.5rem;
 }
 .pl-2 {
 	padding-left: 0.5rem;
+}
+.pt-8 {
+	padding-top: 2rem;
 }
 .text-left {
 	text-align: left;
@@ -2133,21 +2142,21 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.text-8xl {
-	font-size: 6rem;
-	line-height: 1;
-}
 .text-5xl {
 	font-size: 3rem;
+	line-height: 1;
+}
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
+.text-8xl {
+	font-size: 6rem;
 	line-height: 1;
 }
 .text-3xl {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
-}
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
 }
 .font-medium {
 	font-weight: 500;
@@ -2194,11 +2203,11 @@ select {
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
-.tracking-wider {
-	letter-spacing: 0.05em;
-}
 .tracking-wide {
 	letter-spacing: 0.025em;
+}
+.tracking-wider {
+	letter-spacing: 0.05em;
 }
 .tracking-normal {
 	letter-spacing: 0em;
@@ -2263,6 +2272,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
+.text-theme-blue-200 {
+	--tw-text-opacity: 1;
+	color: rgba(38, 130, 171, var(--tw-text-opacity));
+}
 .text-theme-blue-100 {
 	--tw-text-opacity: 1;
 	color: rgba(43, 145, 191, var(--tw-text-opacity));
@@ -2286,10 +2299,6 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-theme-blue-200 {
-	--tw-text-opacity: 1;
-	color: rgba(38, 130, 171, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2471,12 +2480,12 @@ select {
 .hover\:opacity-100:hover {
 	opacity: 1;
 }
-.hover\:shadow-xl:hover {
-	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .hover\:shadow:hover {
 	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-xl:hover {
+	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .focus\:z-10:focus {
@@ -2506,6 +2515,10 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
+.focus\:border-theme-blue-100:focus {
+	--tw-border-opacity: 1;
+	border-color: rgba(43, 145, 191, var(--tw-border-opacity));
+}
 .focus\:border-theme-blue-300:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(34, 116, 152, var(--tw-border-opacity));
@@ -2513,10 +2526,6 @@ select {
 .focus\:border-theme-blue-200:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(38, 130, 171, var(--tw-border-opacity));
-}
-.focus\:border-theme-blue-100:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(43, 145, 191, var(--tw-border-opacity));
 }
 .focus\:border-gray-100:focus {
 	--tw-border-opacity: 1;
@@ -2614,6 +2623,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
+.active\:bg-gray-400:active {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .active\:bg-theme-blue-400:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(30, 101, 133, var(--tw-bg-opacity));
@@ -2621,10 +2634,6 @@ select {
 .active\:bg-theme-blue-300:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(34, 116, 152, var(--tw-bg-opacity));
-}
-.active\:bg-gray-400:active {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 .active\:text-gray-700:active {
 	--tw-text-opacity: 1;
@@ -2888,6 +2897,18 @@ select {
 
 	.md\:grid {
 		display: grid;
+	}
+
+	.md\:w-6\/12 {
+		width: 50%;
+	}
+
+	.md\:w-8\/12 {
+		width: 66.666667%;
+	}
+
+	.md\:w-10\/12 {
+		width: 83.333333%;
 	}
 
 	.md\:grid-cols-3 {
