--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1315,11 +1315,14 @@ select {
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
-.m-4 {
-	margin: 1rem;
+.col-span-11 {
+	grid-column: span 11 / span 11;
 }
 .m-6 {
 	margin: 1.5rem;
+}
+.m-4 {
+	margin: 1rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1416,17 +1419,38 @@ select {
 .mb-24 {
 	margin-bottom: 6rem;
 }
-.mb-32 {
-	margin-bottom: 8rem;
-}
 .mb-12 {
 	margin-bottom: 3rem;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
+.mb-32 {
+	margin-bottom: 8rem;
+}
 .-mt-px {
 	margin-top: -1px;
+}
+.ml-8 {
+	margin-left: 2rem;
+}
+.ml-16 {
+	margin-left: 4rem;
+}
+.ml-32 {
+	margin-left: 8rem;
+}
+.ml-40 {
+	margin-left: 10rem;
+}
+.ml-24 {
+	margin-left: 6rem;
+}
+.ml-48 {
+	margin-left: 12rem;
+}
+.ml-56 {
+	margin-left: 14rem;
 }
 .block {
 	display: block;
@@ -1485,6 +1509,9 @@ select {
 .h-screen {
 	height: 100vh;
 }
+.max-h-28 {
+	max-height: 7rem;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1539,20 +1566,14 @@ select {
 .w-40 {
 	width: 10rem;
 }
-.w-1\/2 {
-	width: 50%;
-}
 .w-24 {
 	width: 6rem;
 }
-.w-screen {
-	width: 100vw;
+.w-1\/2 {
+	width: 50%;
 }
-.w-11\/12 {
-	width: 91.666667%;
-}
-.w-96 {
-	width: 24rem;
+.w-2 {
+	width: 0.5rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1569,9 +1590,6 @@ select {
 .max-w-xl {
 	max-width: 36rem;
 }
-.max-w-4xl {
-	max-width: 56rem;
-}
 .max-w-lg {
 	max-width: 32rem;
 }
@@ -1580,6 +1598,9 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
+}
+.max-w-4xl {
+	max-width: 56rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1638,11 +1659,14 @@ select {
 .grid-cols-4 {
 	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.grid-cols-8 {
+	grid-template-columns: repeat(8, minmax(0, 1fr));
+}
 .grid-cols-3 {
 	grid-template-columns: repeat(3, minmax(0, 1fr));
 }
-.grid-cols-8 {
-	grid-template-columns: repeat(8, minmax(0, 1fr));
+.grid-cols-12 {
+	grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1677,11 +1701,11 @@ select {
 .gap-3 {
 	gap: 0.75rem;
 }
-.gap-8 {
-	gap: 2rem;
-}
 .gap-5 {
 	gap: 1.25rem;
+}
+.gap-8 {
+	gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1718,15 +1742,15 @@ select {
 	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .space-y-7 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
@@ -1737,6 +1761,11 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
@@ -1778,6 +1807,9 @@ select {
 }
 .rounded-full {
 	border-radius: 9999px;
+}
+.rounded-sm {
+	border-radius: 0.125rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -1906,14 +1938,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(43, 145, 191, var(--tw-bg-opacity));
 }
-.bg-green-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-.bg-gray-900 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
 .bg-blue-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
@@ -1930,10 +1954,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(38, 130, 171, var(--tw-bg-opacity));
 }
-.bg-green-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
-}
 .bg-green-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
@@ -1941,6 +1961,26 @@ select {
 .bg-red-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+}
+.bg-green-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+}
+.bg-green-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-blue-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1973,9 +2013,6 @@ select {
 .p-8 {
 	padding: 2rem;
 }
-.p-10 {
-	padding: 2.5rem;
-}
 .p-1 {
 	padding: 0.25rem;
 }
@@ -1984,6 +2021,9 @@ select {
 }
 .p-5 {
 	padding: 1.25rem;
+}
+.p-10 {
+	padding: 2.5rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -2088,6 +2128,9 @@ select {
 .pt-16 {
 	padding-top: 4rem;
 }
+.pt-8 {
+	padding-top: 2rem;
+}
 .pb-8 {
 	padding-bottom: 2rem;
 }
@@ -2096,9 +2139,6 @@ select {
 }
 .pl-2 {
 	padding-left: 0.5rem;
-}
-.pt-8 {
-	padding-top: 2rem;
 }
 .text-left {
 	text-align: left;
@@ -2146,13 +2186,13 @@ select {
 	font-size: 3rem;
 	line-height: 1;
 }
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
-}
 .text-8xl {
 	font-size: 6rem;
 	line-height: 1;
+}
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .text-3xl {
 	font-size: 1.875rem;
@@ -2272,10 +2312,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
-.text-theme-blue-200 {
-	--tw-text-opacity: 1;
-	color: rgba(38, 130, 171, var(--tw-text-opacity));
-}
 .text-theme-blue-100 {
 	--tw-text-opacity: 1;
 	color: rgba(43, 145, 191, var(--tw-text-opacity));
@@ -2288,17 +2324,25 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
-.text-blue-500 {
-	--tw-text-opacity: 1;
-	color: rgba(59, 130, 246, var(--tw-text-opacity));
-}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
+.text-blue-500 {
+	--tw-text-opacity: 1;
+	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-theme-blue-200 {
+	--tw-text-opacity: 1;
+	color: rgba(38, 130, 171, var(--tw-text-opacity));
+}
+.text-theme-blue-300 {
+	--tw-text-opacity: 1;
+	color: rgba(34, 116, 152, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2897,18 +2941,6 @@ select {
 
 	.md\:grid {
 		display: grid;
-	}
-
-	.md\:w-6\/12 {
-		width: 50%;
-	}
-
-	.md\:w-8\/12 {
-		width: 66.666667%;
-	}
-
-	.md\:w-10\/12 {
-		width: 83.333333%;
 	}
 
 	.md\:grid-cols-3 {
